@@ -1,0 +1,6 @@
+<a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a>
+<?php
+escreverUsuarioEmailTipo();
+minhaPaginaTipoUsuario();
+?>
+<p><a href="/vittaclinic2/paginas/comum/marcar-consulta.php">Marcar Consulta</a></p>
