@@ -1,0 +1,5 @@
+<a href="/vittaclinic2/index.php"><h1>Vitta.Clinic</h1></a>
+<?php
+escreverUsuarioEmailTipo();
+minhaPaginaTipoUsuario();
+?>
