@@ -6,7 +6,6 @@ $password = "";
 try {
     $conn = new PDO("mysql:host=$servername;dbname=dbvittaclinic", $username, $password);
     $conn -> setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
-    echo "Conexão bem sucedida<br>";
 }   catch(PDOException $e) {
     echo "erro:" . $e->getMessage();
 }
